manuscripts/elife-72555/v3/manuscript.md
# Structural insights into recognition of chemokine receptors by Staphylococcus aureus leukotoxins

## Authors

- Paul Lambey<sup>1</sup>
- Omolade Otun<sup>1</sup>
- Xiaojing Cong<sup>1</sup>
- François Hoh<sup>2</sup>
- Luc Brunel<sup>2</sup>
- Pascal Verdié<sup>2</sup> ([ORCID: 0000-0002-5807-0293](https://orcid.org/0000-0002-5807-0293))
- Claire M Grison<sup>1</sup>
- Fanny Peysson<sup>1</sup>
- Sylvain Jeannot<sup>1</sup>
- Thierry Durroux<sup>1</sup>
- Cherine Bechara<sup>1</sup>
- Sébastien Granier<sup>1</sup> †
- Cédric Leyrat<sup>1</sup> ([ORCID: 0000-0003-0189-0562](https://orcid.org/0000-0003-0189-0562)) †

### Affiliations

1. Institut de Génomique Fonctionnelle, Université de Montpellier, CNRS, INSERM Montpellier France
2. Institut des Biomolécules Max Mousseron (IBMM) Université de Montpellier, CNRS, INSERM Montpellier France

† Corresponding author

## Abstract

Staphylococcus aureus (SA) leukocidin LukED belongs to a family of bicomponent pore forming toxins that play important roles in SA immune evasion and nutrient acquisition. LukED targets specific G protein-coupled chemokine receptors to lyse human erythrocytes (red blood cells) and leukocytes (white blood cells). The first recognition step of receptors is critical for specific cell targeting and lysis. The structural and molecular bases for this mechanism are not well understood but could constitute essential information to guide antibiotic development. Here, we characterized the interaction of LukE with chemokine receptors ACKR1, CCR2 and CCR5 using a combination of structural, pharmacological and computational approaches. First, crystal structures of LukE in complex with a small molecule mimicking sulfotyrosine side chain (p-cresyl sulfate) and with peptides containing sulfotyrosines issued from receptor sequences revealed the location of receptor sulfotyrosine binding sites in the toxins. Then, by combining previous and novel experimental data with protein docking, classical and accelerated weight histogram (AWH) molecular dynamics we propose models of the ACKR1-LukE and CCR5-LukE complexes. This work provides novel insights into chemokine receptor recognition by leukotoxins and suggests that the conserved sulfotyrosine binding pocket could be a target of choice for future drug development.
